--- a/AiLianRen/manifest.json
+++ b/AiLianRen/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "这些年我们追过的AI恋人",
-    "appid" : "__UNI__69892C0",
-    "description" : "AI互动恋爱养成游戏，通过自由对话，体验完整的恋爱人生",
+    "name" : "AiLianRen",
+    "appid" : "__UNI__C3521BD",
+    "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
